Fix spacing issues with margins on images

--- a/theme/scss/_layout.scss
+++ b/theme/scss/_layout.scss
@@ -42,8 +42,8 @@ section.sidebar {
 	text-align: center;
 }
 
-img {
-	margin-bottom: 1em;
+p img + img {
+	margin-top: 1em;
 }
 
 ul.tags {
