--- a/theme/scss/_post.scss
+++ b/theme/scss/_post.scss
@@ -2,6 +2,10 @@ header h1 a {
 	background-image: none;
 }
 
+div.feature-image img.feature-image {
+	margin-bottom: 1em;
+}
+
 header.post,.post header,.series header {
 	a { background-image: none; }
 		
@@ -58,6 +62,8 @@ header.post {
 		p {
 			margin: 0;
 			display: inline-block;
+
+
 		}
 
 		margin-bottom: 0.5em;
